<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Todo List</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About Todo List</string>
    <string name="add">Add </string>
    <string name="add_todo_lbl">Enter the todo item:</string>
    <string name="author">Wendy-Anne Daniel dani0004</string>
    <string name="cancel">Cancel </string>
    <string name="change">Change </string>
    <string name="database_error">Database error please contact application support</string>
    <string name="delete">Delete </string>
    <string name="delete_last">Deleting the last list item </string>
    <string name="delete_select">You must select an item to delete </string>
    <string name="error_condition">Application error please contact your system administrator</string>
    <string name="ok_button">OK</string>
    <string name="listall">List All</string>
    <string name="missing_todo_error">The todo must not be blank</string>
    <string name="previous_item">Previous item:</string>
    <string name="test">test</string>
    <string name="title_activity_create_todo">CreateTodo</string>
    <string name="todo_hint">Enter the todo item:</string>
    <string name="todo_update_hint">Enter the replacement todo item:</string>
     <string name="title_activity_update_todo">UpdateTodo</string>
    <string name="update">Update</string>
    <string name="update_select">You must select an item to update </string>
    <string name="update_last">Updating the last item in the list</string>
   
    

</resources>
