<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TodoList" >
   
    
    
    <EditText 
        android:id="@+id/updateTodo_txt"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:inputType="text"
       
        android:textSize="18sp"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/todo_update_hint"
        
        
        />
       <TextView android:id="@+id/prevlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_item"
        android:layout_below="@+id/updateTodo_txt"
      	android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"
       
       />
     <TextView android:id="@+id/selectedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prevlabel"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"
       
       
       />
    
    <Button
            android:id="@+id/update"
            android:layout_width="100dip"
            android:layout_height="40dip"
            
            android:text="@string/update"
            android:textColor="@color/text_color" 
            android:onClick="onUpdateTodo"
            android:layout_below="@+id/selectedText"
            />
    <Button
            android:id="@+id/cancel"
            android:layout_width="100dip"
            android:layout_height="40dip"
            
            android:text="@string/cancel"
            android:textColor="@color/text_color" 
            android:onClick="onCancelTodo"
            android:layout_below="@+id/selectedText"
            android:layout_toRightOf="@+id/update"
            
            />
    

</RelativeLayout>
