<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
   
    >

   <LinearLayout
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" >
        
       

        <Button
            android:id="@+id/add"
            style="?android:attr/buttonBarButtonStyle" 
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:textColor="@color/text_color" 
            android:onClick="onClick"/>
         <View
           android:layout_width="1dip"
            android:layout_height="50dip"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="-3dip"
            android:background="?android:attr/dividerVertical" 
            />

        <Button
            android:id="@+id/delete"
            style="?android:attr/buttonBarButtonStyle" 
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" 
            android:onClick="onClick"/>
        <View
            
            android:layout_width="1dip"
            android:layout_height="50dip"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="-3dip"
            android:background="?android:attr/dividerVertical" 
            />
         <Button
            android:id="@+id/update"
            style="?android:attr/buttonBarButtonStyle" 
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update" 
            android:onClick="onClick"/>
        
        
           
    </LinearLayout>
     <View
           android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:background="?android:attr/dividerHorizontal" />
    
   <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test" 
        android:background="@layout/default_shape_drawable"
        />

</LinearLayout> 
